tests/Tuc/Fixtures/errors/ComponentWithoutParticipants.tuc
tuc parse error test
participants
    GenericService parts
    StreamComponent parts
